192		C++			Read regiment costs from a file instead of hardcoding them
193		C++			Complete port whitelist and blacklist.
194		C++			Speed up state conversion (O(n^2)->O(n))
195		C++			Speed up country mapping
196		C++			Added another DW save game
197		C++			Correct DW Switzerland province mappings
198		C++			steppe_horde added to government map.
199		C++			Always give democracies some form of voting rights.
200		C++			Grow soldier pops to support the regiments assigned to them
201		C++			Give pooled regiments to the armies/navies that were most shortchanged
202		C++			If a regiment's home province doesn't belong to the regiment owner, don't try to use its pops.
					If a regiment's home was originally a colony that can't support it, make it into an expeditionary unit.
					Detect and handle several additional errors in army placement.
203		C++			EU3 provinces 1129 and 1130 correctly mapped.
204		C++			Moved some functions to new files.
205		C++			Assign names to converted regiments and ships, and record the name counts for V2
					Improve robustness and determinism of pool allocation retry logic
					All reforms set again.
206		C++			Colonized provinces not required for cultural unions.
207		C++			Cultures can be distinguished by province owner/country tag and religion.
208		C++			Government type now influences political reforms.
209		C++			The rest of the files needed for reforms.
210		C++			Automated test conversions.
211		C++			Build script uses environment variables instead of hard-coded paths.
212		C++			Renamed test input for new script.
213		C++			Sliders now influence political reforms.
214		C++			Flags and modifiers now influence political reforms.
215		C++			Build_and_test.bat
216		C++			DasGuntLord01's recommended changes.
217		C++			Improve fairness of many-to-one owner and core allocations.
218		C++			Simplify capital conversion algorithm.
219		C++			Create minority pops for many-to-one mapped provinces, when applicable.