@@ -238,3 +238,5 @@ Revision	Version Updated		Log Message
 217		C++			Improve fairness of many-to-one owner and core allocations.
 218		C++			Simplify capital conversion algorithm.
 219		C++			Create minority pops for many-to-one mapped provinces, when applicable.
+220		???
+221		C++			Add minorities to provinces with recent conversion and assimilation events.
